--- a/src/Components/Header.module.css
+++ b/src/Components/Header.module.css
@@ -42,6 +42,7 @@
     font-weight: bold;
     color: white;
     font-family: 'Gemunu Libre', sans-serif;
+    cursor: pointer;
 }
 .nav-list li:hover{
     transform: scale(1.1,1.1)
