--- a/src/Components/Header.module.css
+++ b/src/Components/Header.module.css
@@ -1,49 +1,47 @@
-@import url('https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@200&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@200&display=swap");
 
+.container {
+  display: flex;
+  background-color: rgba(0, 0, 0, 0.75);
+  flex-direction: column;
+}
+.top-nav {
+  display: flex;
+  justify-content: space-between;
+  margin-left: 25px;
+}
 
-.container{
-    display: flex;
-    background-color: rgba(0,0,0,0.75 );
-    flex-direction: column;
+.list {
+  display: flex;
+  gap: 30px;
+  margin-right: 15px;
 }
-.top-nav{
-    display: flex;
-    justify-content: space-between;
-    margin-left: 25px;
+.list li {
+  list-style-type: none;
+  color: whitesmoke;
+  font-size: 18px;
+  border-radius: 18px;
 }
-
-.list{
-    display:flex;
-    gap: 30px;
-    margin-right: 15px;
+.list li:hover {
+  transform: scale(1.5, 1.5);
 }
-.list li{
-    list-style-type: none;
-    color: whitesmoke;
-    font-size: 18px;
-    border-radius: 18px;
-    
+.nav {
+  margin-left: -5px;
 }
-.list li:hover{
-    transform: scale(1.5, 1.5);
+.nav-list {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 0px;
+  margin-right: 25px;
 }
-.nav{
-    margin-left: -5px;
+.nav-list li {
+  list-style-type: none;
+  margin-left: 0px;
+  font-weight: bold;
+  color: white;
+  font-family: "Gemunu Libre", sans-serif;
+  cursor: pointer;
 }
-.nav-list{
-    display:flex;
-    justify-content: space-between;
-    margin-top: 0px;
-    margin-right: 25px;
-}
-.nav-list li{
-    list-style-type: none;
-    margin-left: 0px;
-    font-weight: bold;
-    color: white;
-    font-family: 'Gemunu Libre', sans-serif;
-    cursor: pointer;
-}
-.nav-list li:hover{
-    transform: scale(1.1,1.1)
+.nav-list li:hover {
+  transform: scale(1.1, 1.1);
 }
