--- a/src/Components/Header.module.css
+++ b/src/Components/Header.module.css
@@ -1,14 +1,23 @@
 @import url("https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@200&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap');
 .container {
   display: flex;
   background-color: rgba(0, 0, 0, 0.75);
+  width: 100%;
   flex-direction: column;
+  position: fixed;
+  top: 0;
 }
 .top-nav {
   display: flex;
   justify-content: space-between;
   margin-left: 25px;
+}
+.top-nav p {
+  color: white;
+  transform: scale(1.5, 1.5);
+  text-decoration: none;
+  font-family: 'Roboto Mono', monospace;
 }
 
 .list {
@@ -28,10 +37,6 @@
 .nav {
   margin-left: -5px;
 }
-.nav-scroll{
-  position: fixed;
-  top:0
-}
 .nav-list {
   display: flex;
   justify-content: space-between;
@@ -43,9 +48,21 @@
   margin-left: 0px;
   font-weight: bold;
   color: white;
-  font-family: "Gemunu Libre", sans-serif;
+  font-family: 'Roboto Mono', monospace;
   cursor: pointer;
 }
 .nav-list li:hover {
   transform: scale(1.1, 1.1);
+}
+a:link {
+  text-decoration: none;
+}
+a:visited {
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: none;
+}
+a:active {
+  text-decoration: none;
 }
