added featured section at top of home page

--- a/src/Components/Home/Home.module.css
+++ b/src/Components/Home/Home.module.css
@@ -1,4 +1,14 @@
 .container{
+    
+    display: flex;
+    flex-wrap: wrap;
+    width: 100vw;
+    justify-content: center;
+    gap: 20px;
+    background: rgb(32,32,32);
+ 
+}
+.list{
     display: flex;
     flex-wrap: wrap;
     height: 100vh;
@@ -6,6 +16,12 @@
     overflow:auto;
     justify-content: center;
     gap: 20px;
-    list-style: none;
-    margin-top: 14vh;
+    list-style: none; 
+    background: -moz-linear-gradient(180deg, rgba(32,32,32,1) 33%, rgba(101,101,101,1) 70%, rgba(116,116,116,1) 89%);
+    background: -webkit-linear-gradient(180deg, rgba(32,32,32,1) 33%, rgba(101,101,101,1) 70%, rgba(116,116,116,1) 89%);
+    background: linear-gradient(180deg, rgba(32,32,32,1) 33%, rgba(101,101,101,1) 70%, rgba(116,116,116,1) 89%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#202020",endColorstr="#747474",GradientType=1); 
+    background-repeat:no-repeat;
+    background-size:auto;
+    height:100vh;
 }
