--- a/src/Components/Settings/Settings.module.css
+++ b/src/Components/Settings/Settings.module.css
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-color: rgb(39, 38, 38);
+  background-color: rgba(61,60,63,255) ;
   border-radius: 10px;
   width: 75%;
   max-width: 800px;
@@ -27,8 +27,8 @@
   color: white;
   justify-content: space-between;
   background-size: cover;
-  background-color: rgb(65, 65, 65);
-  border-bottom: 2px solid black;
+  background-color:rgba(61,60,63,255);
+  border-bottom: 2px solid rgba(79,79,83,255);
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
@@ -41,11 +41,12 @@
 .close-button {
   margin-top: 15px;
   margin-right: 25px;
-  height: 30px;
-  width: 30px;
-  color: white;
-  background-color: rgb(119, 118, 118);
-  border-radius: 5px;
+  height: 45px;
+  width: 45px;
+  color: rgba(170,167,184,255);
+  font-weight: bold;
+  background-color: rgba(90,89,96,255);
+  border-radius: 100%;
   border: none;
   border-bottom: 2px solid rgb(75, 75, 75);
   cursor: pointer;
@@ -62,7 +63,7 @@
 .body p {
   margin-top: 0;
   font-family: 'Roboto Mono', monospace;
-  color: white;
+  color: rgba(246,246,247,255);
   font-size: 20px;
 }
 .services {
@@ -70,7 +71,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color: white;
+  color: rgba(246,246,247,255);
   margin-left: -15px;
   width: 100%;
   font-family: 'Roboto Mono', monospace;
@@ -82,27 +83,30 @@
   height: 45px;
   margin: 0px;
   justify-content: space-between;
-  border-bottom: 1px solid black;
-  border-top: 1px solid black;
+  border-bottom: 1px solid rgba(41,40,43,255);
+  border-top: 1px solid rgba(41,40,43,255);
   display: flex;
 }
 .services label:hover {
-  background-color: grey;
+  background-color: rgba(78,77,82,255);
 }
 .footer {
-  border-top: 2px solid rgb(54, 54, 54);
+  border-top: 2px solid rgba(41,40,43,255);
+  background-color: rgba(49,49,51,255);
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
   display: flex;
   justify-content: flex-end;
-  margin-bottom: 10px;
 }
 .footer button {
-  background-color: rgb(103, 105, 248);
+  background-color: rgba(100,98,252,255);
   border-radius: 5px;
   border:none;
   border-top: 2px solid rgb(139, 141, 226);
   height: 40px;
   width: 75px;
   margin-top: 10px;
+  margin-bottom: 10px;
   margin-right: 25px;
   color: white;
   font-family: 'Roboto Mono', monospace;
