--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: rgb(32,32,32);
-  background: -moz-linear-gradient(180deg, rgba(32,32,32,1) 33%, rgba(101,101,101,1) 70%, rgba(116,116,116,1) 89%);
-  background: -webkit-linear-gradient(180deg, rgba(32,32,32,1) 33%, rgba(101,101,101,1) 70%, rgba(116,116,116,1) 89%);
-  background: linear-gradient(180deg, rgba(32,32,32,1) 33%, rgba(101,101,101,1) 70%, rgba(116,116,116,1) 89%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#202020",endColorstr="#747474",GradientType=1); 
+  background: rgba(49,49,51,255);
   background-repeat:no-repeat;
   background-size:auto;
   height:100vh;
