--- a/src/Components/Home/Home.module.css
+++ b/src/Components/Home/Home.module.css
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   gap: 20px;
-  background: rgb(32, 32, 32);
+  background: rgba(49,49,51,255);
 }
 .list {
   display: flex;
@@ -19,25 +19,7 @@
   align-items: center;
   gap: 20px;
   list-style: none;
-  background: -moz-linear-gradient(
-    180deg,
-    rgba(32, 32, 32, 1) 33%,
-    rgba(101, 101, 101, 1) 70%,
-    rgba(116, 116, 116, 1) 89%
-  );
-  background: -webkit-linear-gradient(
-    180deg,
-    rgba(32, 32, 32, 1) 33%,
-    rgba(101, 101, 101, 1) 70%,
-    rgba(116, 116, 116, 1) 89%
-  );
-  background: linear-gradient(
-    180deg,
-    rgba(32, 32, 32, 1) 33%,
-    rgba(101, 101, 101, 1) 70%,
-    rgba(116, 116, 116, 1) 89%
-  );
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#202020",endColorstr="#747474",GradientType=1);
+  background:rgba(49,49,51,255);
   background-repeat: no-repeat;
   background-size: auto;
 }
