--- a/src/Components/Home/Featured.module.css
+++ b/src/Components/Home/Featured.module.css
@@ -1,5 +1,43 @@
 .featured{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
     width: 100vw;
     background-size: 100vw;
     margin-top:100px;
 }
+.featured img{
+    display: flex;
+    justify-content: center;
+    width: 250px;
+    max-width: 50vw;
+    margin: auto;
+}
+.buttons {
+    display: flex;
+    width: 250px;
+    max-width: 50vw;
+    margin: auto;
+    justify-content: space-between;
+    gap: 15px;
+}
+.buttons button {
+    background-color: rgba(100,98,252,255);
+    border-radius: 5px;
+    border:none;
+    border-top: 2px solid rgb(139, 141, 226);
+    height: 40px;
+    width: 90px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    color: white;
+    font-family: 'Roboto Mono', monospace;
+    font-size: 13px;
+    cursor: pointer;
+  }
+  .buttons button:hover {
+    border: 2px solid rgb(139, 141, 226);
+  }
+  .buttons button:focus {
+    border: 2px solid rgb(139, 141, 226);
+  }
