--- a/src/Components/Home/MovieCard.module.css
+++ b/src/Components/Home/MovieCard.module.css
@@ -3,6 +3,7 @@
     border-radius: 10px;
     flex-direction: column;
     justify-content: space-between;
+    margin-top: 20px;
     width: 110px;
     height: 180px;
     background-color: rgb(15, 15, 37);
