--- a/src/Components/Home/MovieCard.module.css
+++ b/src/Components/Home/MovieCard.module.css
@@ -10,16 +10,9 @@
     border-bottom: 2px solid rgb(47, 47, 117);
     box-shadow: 5px 1px 5px rgba(0, 0, 0, 0.5)
 }
-.card p{
-    margin-top: 1%;
-    width: 100%;
-    height: 10%;
-    font-size:12px;
-    overflow: hidden;
-
-}
 .card img{
-    height: 90%;
+    height: 100%;
+    border-radius: 10px;
 }
 .card:hover{
     transform: scale(1.2,1.2)
