--- a/src/Components/Home/Featured.module.css
+++ b/src/Components/Home/Featured.module.css
@@ -5,6 +5,18 @@
     width: 100vw;
     background-size: 100vw;
     margin-top:100px;
+    background-color:rgba(61,60,63,255);
+    border-bottom: 2px solid rgba(41,40,43,255);
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+}
+.featured h1{
+  width: 100%;
+  height: 60px;
+  background-color:rgba(61,60,63,255);
+  border-bottom: 2px solid rgba(79,79,83,255);
+  border-top-left-radius: 50px;
+  border-top-right-radius: 50px;
 }
 .featured img{
     display: flex;
