--- a/src/Components/Home/MyList/MyList.module.css
+++ b/src/Components/Home/MyList/MyList.module.css
@@ -5,6 +5,7 @@
     padding-bottom: 25px;
     width: 100vw;
     gap: 20px;
+    padding-left: 120px;
     border: 1px solid rgb(88, 88, 88);
     box-shadow: inset 1px 1px 10px black;
     overflow: auto;
